Information on configuring vanila Tomcat-6.0.29